--- a/css/typography.css
+++ b/css/typography.css
@@ -91,3 +91,28 @@ code {
 .hug {
   margin-top: 0;
 }
+
+@media only screen and (max-width: 700px) {
+    html {
+        font-size: 110%;
+    }
+    /* Style adjustments for viewports that meet the condition */
+}
+
+@media only screen and (max-width: 520px) {
+    html {
+        font-size: 100%;
+    }
+    h1 {
+        font-size: 2.828rem;
+        line-height: 3rem;
+        margin-top: 3rem;
+    }
+    h2 {
+        font-size: 1.414rem;
+        line-height: 1.5rem;
+    }
+    h3 {
+        font-size: 1rem;
+    }
+}
