--- a/css/typography.css
+++ b/css/typography.css
@@ -8,8 +8,8 @@ html {
 }
 /* Copy & Lists */
 p, nav {
-  line-height: 1.5rem;
-  margin-top: 1.5rem;
+  line-height: 1.3;
+  margin-top: .75rem;
   margin-bottom: 0;
 }
 ul,
