--- a/css/typography.css
+++ b/css/typography.css
@@ -2,7 +2,7 @@
 /* Setup */
 html {
   /* Change default typefaces here */
-  font-family: serif;
+  font-family: PT Sans, system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   font-size: 137.5%;
   -webkit-font-smoothing: antialiased;
 }
@@ -41,7 +41,8 @@ h4,
 h5,
 h6 {
   /* Change heading typefaces here */
-  font-family: sans-serif;
+  font-family: Fira Sans, PT Sans, 'Helvetica Neue', Calibri, 'Trebuchet MS', sans-serif;
+  font-weight: 600;
   margin-top: 1.5rem;
   margin-bottom: 0;
   line-height: 1.5rem;
