--- a/css/main.css
+++ b/css/main.css
@@ -176,8 +176,17 @@ p > img {
     margin: 0 -1.5rem 1.5rem;
 }
 
+.col-1of2 {
+    flex: 1 1 50%;
+    padding: 0 1.5rem;
+    box-sizing: border-box;
+    min-width: 300px;
+    max-width: 50%;
+    margin-top: 1.5rem;
+}
+
 .col-1of3 {
-    flex: 1 1  33.33%;
+    flex: 1 1 33.33%;
     padding: 0 1.5rem;
     box-sizing: border-box;
     min-width: 250px;
