--- a/css/main.css
+++ b/css/main.css
@@ -244,14 +244,10 @@ p > img {
     order: 2;
     flex: 1 0 20%;
     margin-top: 1.5em;
-    background: url(../img/avatar-hover.jpg) center center no-repeat;
-    background-size: cover;
 }
 .mainpage-header__avatar img {
     margin-top: 0;
-}
-.mainpage-header__avatar:hover img {
-    opacity: 0;
+    border-radius: 50%;
 }
 
 @media only screen and (max-width: 960px) {
