--- a/css/main.css
+++ b/css/main.css
@@ -245,6 +245,7 @@ p > img {
     order: 2;
     flex: 1 0 20%;
     margin-top: 1.5em;
+    margin-left: 1em;
 }
 .mainpage-header__avatar img {
     margin-top: 0;
