--- a/css/main.css
+++ b/css/main.css
@@ -250,6 +250,9 @@ p > img {
 .mainpage-header__avatar img {
     margin-top: 0;
     border-radius: 50%;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
 }
 
 @media only screen and (max-width: 960px) {
@@ -434,7 +437,7 @@ p > img {
     }
     @page {
         size: A4;
-        margin: 1cm 2cm;
+        margin: 0.8cm 1.5cm;
     }
 
     *,
