--- a/css/typography.css
+++ b/css/typography.css
@@ -1,10 +1,8 @@
-@import 'system-ui.css';
-
 /*! Typebase.less v0.1.0 | MIT License */
 /* Setup */
 html {
   /* Change default typefaces here */
-  font-family: PT Sans, system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   font-size: 137.5%;
   -webkit-font-smoothing: antialiased;
 }
@@ -59,7 +57,7 @@ h4,
 h5,
 h6 {
   /* Change heading typefaces here */
-  font-family: Fira Sans, PT Sans, 'Helvetica Neue', Calibri, 'Trebuchet MS', sans-serif;
+  font-family: 'Helvetica Neue', Calibri, 'Trebuchet MS', sans-serif;
   font-weight: 600;
   margin-top: 1.5rem;
   margin-bottom: 0;
