--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -42,16 +42,16 @@ import MyProjectsList from '../components/MyProjectsList.astro';
                     class='border-bottom'
                 />
                 <h3 class='mt-0'>
-                    <a
-                        href='https://github.com/Seigiard/keyboard-layout'
-                    >Универсальная раскладка для&nbsp;мака</a>
+                    <a href='https://github.com/Seigiard/keyboard-layout'
+                        >Универсальная раскладка для&nbsp;мака</a
+                    >
                 </h3>
-                <p>
-                    помогает писать и&nbsp;вводить символы на&nbsp;английском, словацком, русском,
-                    украинском и&nbsp;белорусском языках.
+                <p class='mt-0'>
+                    помогает писать и&nbsp;вводить символы на&nbsp;английском,
+                    словацком, русском, украинском и&nbsp;белорусском языках.
                 </p>
             </div>
-            <div class="project-card mt-1.5">
+            <div class='project-card mt-1.5'>
                 <img
                     src='img/workshoptab-wizard/preview.jpg'
                     alt='Вокршоптаб Визард'
@@ -74,7 +74,9 @@ import MyProjectsList from '../components/MyProjectsList.astro';
                             class='border-bottom'
                         />
                         <h3 style='mt-0'>
-                            <a href='/projects/dtco-configurator'>Конфигуратор тахографов</a>
+                            <a href='/projects/dtco-configurator'
+                                >Конфигуратор тахографов</a
+                            >
                         </h3>
                     </div>
                 </div>
@@ -85,14 +87,13 @@ import MyProjectsList from '../components/MyProjectsList.astro';
                     </div>
                 </div>
                 <div class='col-1of3 mt-1.5'>
-
                     <div class='project-card'>
                         <img src='img/znkmr/znkmr-teaser.png' alt='Знакомер' />
                         <h3>
                             <a
                                 href='https://github.com/Seigiard/keyboard-layout'
-                                class='project-card'
-                            >Знакомер</a>
+                                class='project-card'>Знакомер</a
+                            >
                         </h3>
                     </div>
                 </div>
