--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,9 +1,9 @@
 ---
-import Layout from '../layouts/Layout.astro';
-import MyProjectsList from '../components/MyProjectsList.astro';
+import Layout from "../layouts/Layout.astro";
+import MyProjectsList from "../components/MyProjectsList.astro";
 ---
 
-<Layout lang={'ru'}>
+<Layout lang={"ru"}>
     <p>
         Верстать начал в&nbsp;1998 году, с&nbsp;2003 года работаю
         во&nbsp;фронтенде. Разрабатываю сайты и&nbsp;приложения на&nbsp;JS. Умею
@@ -27,89 +27,89 @@ import MyProjectsList from '../components/MyProjectsList.astro';
         новинками веба и&nbsp;стараюсь их&nbsp;пощупать.
     </p>
 
-    <p>Почта: <a href='mailto:seigiard@gmail.com'>seigiard@gmail.com</a>.</p>
+    <p>Почта: <a href="mailto:seigiard@gmail.com">seigiard@gmail.com</a>.</p>
 
     <h2>Работа</h2>
     <MyProjectsList />
 
     <h2>Сделал разные штуки</h2>
-    <div class='row row-single'>
-        <div class='col-4of5 my-1.5'>
-            <div class='project-card'>
+    <div class="row row-single">
+        <div class="col-4of5 my-1.5">
+            <div class="project-card">
                 <img
-                    src='img/keyboard-preview.png'
-                    alt='Вокршоптаб Визард'
-                    class='border-bottom'
+                    src="img/keyboard-preview.png"
+                    alt="Вокршоптаб Визард"
+                    class="border-bottom"
                 />
-                <h3 class='mt-0'>
-                    <a href='https://github.com/Seigiard/keyboard-layout'
+                <h3 class="mt-0">
+                    <a href="https://github.com/Seigiard/keyboard-layout"
                         >Универсальная раскладка для&nbsp;мака</a
                     >
                 </h3>
-                <p class='mt-0'>
+                <p class="mt-0">
                     помогает писать и&nbsp;вводить символы на&nbsp;английском,
                     словацком, русском, украинском и&nbsp;белорусском языках.
                 </p>
             </div>
-            <div class='project-card mt-1.5'>
+            <div class="project-card mt-1.5">
                 <img
-                    src='img/workshoptab-wizard/preview.jpg'
-                    alt='Вокршоптаб Визард'
-                    class='border-bottom'
+                    src="img/workshoptab-wizard/preview.jpg"
+                    alt="Вокршоптаб Визард"
+                    class="border-bottom"
                 />
-                <h2 class='mt-0'>
-                    <a href='/projects/workshoptab-wizard'>Воркшоптаб Визард</a>
+                <h2 class="mt-0">
+                    <a href="/projects/workshoptab-wizard">Воркшоптаб Визард</a>
                 </h2>
-                <p class='mt-0'>
+                <p class="mt-0">
                     проводит проверку грузовых машин с&nbsp;помощью цифрового
                     тахографа и&nbsp;блютус-передатчика СмартЛинк.
                 </p>
             </div>
-            <div class='row mb-0'>
-                <div class='col-1of3 mt-1.5'>
-                    <div class='project-card'>
+            <div class="row mb-0">
+                <div class="col-1of3 mt-1.5">
+                    <div class="project-card">
                         <img
-                            src='img/dtco-conf/teaser-dtco.png'
-                            alt='Конфигуратор тахографов'
-                            class='border-bottom'
+                            src="img/dtco-conf/teaser-dtco.png"
+                            alt="Конфигуратор тахографов"
+                            class="border-bottom"
                         />
-                        <h3 style='mt-0'>
-                            <a href='/projects/dtco-configurator'
+                        <h3 style="mt-0">
+                            <a href="/projects/dtco-configurator"
                                 >Конфигуратор тахографов</a
                             >
                         </h3>
                     </div>
                 </div>
-                <div class='col-1of3 mt-1.5'>
-                    <div class='project-card'>
-                        <img src='img/safe/teaser-safe.png' alt='С-Е-Й-Ф' />
-                        <h3><a href='/projects/safe-app'>С-Е-Й-Ф</a></h3>
+                <div class="col-1of3 mt-1.5">
+                    <div class="project-card">
+                        <img src="img/safe/teaser-safe.png" alt="С-Е-Й-Ф" />
+                        <h3><a href="/projects/safe-app">С-Е-Й-Ф</a></h3>
                     </div>
                 </div>
-                <div class='col-1of3 mt-1.5'>
-                    <div class='project-card'>
-                        <img src='img/znkmr/znkmr-teaser.png' alt='Знакомер' />
+                <div class="col-1of3 mt-1.5">
+                    <div class="project-card">
+                        <img src="img/znkmr/znkmr-teaser.png" alt="Знакомер" />
                         <h3>
                             <a
-                                href='https://github.com/Seigiard/keyboard-layout'
-                                class='project-card'>Знакомер</a
+                                href="https://seigiard.com/znkmtr/"
+                                class="project-card">Знакомер</a
                             >
                         </h3>
                     </div>
                 </div>
             </div>
         </div>
-        <div class='col-1of5 project-rating my-1.5'>
-            <div class='project-card'>
+        <div class="col-1of5 project-rating my-1.5">
+            <div class="project-card">
                 <h3>
-                    <a href='http://seigiard.com/bureau-school-rating/'>
+                    <a href="http://seigiard.com/bureau-school-rating/">
                         Рейтинг студентов школы бюро 2017
                     </a>
                 </h3>
                 <div
-                    class='rating-image'
-                    class='border-bottom'
-                    title='Рейтинг студентов школы бюро 2017'
+                    class="rating-image"
+                    class="border-bottom"
+                    title="Рейтинг студентов школы бюро 2017"
                 >
                 </div>
             </div>
